[package]
name = "demtile"
version = "0.1.0"
edition = "2021"
description = "GSI（国土地理院）DEMタイルPNG画像から標高値を取得するRustライブラリ"
authors = ["delihiros"]
repository = "https://github.com/delihiros/demtile"
homepage = "https://github.com/delihiros/demtile"
documentation = "https://docs.rs/demtile"
license = "MIT"
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["gsi", "dem", "elevation", "tile", "png"]

[dependencies]
image = "0.25"
rusqlite = "0.31"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10.9"

[lib]
doctest = false
